implemented API for upcoming and recent concerts
